# pp2

structs/: CMakeLists.txt
structs/2_01/: CMakeLists.txt  main.c  struct_utils.c  struct_utils.h
structs/2_06/: CMakeLists.txt  color.c  color.h  main.c
structs/2_10/: CMakeLists.txt  main.c
structs/2_11/: CMakeLists.txt  main.c  utils.c  utils.h
structs/2_13/: CMakeLists.txt  main.c  utils.c  utils.h
structs/structs_lib/: CMakeLists.txt  library.c  library.h
